--- a/web/app/star-task/star-task.module.css
+++ b/web/app/star-task/star-task.module.css
@@ -170,7 +170,7 @@
   height: calc(100vh - 84px); /* assuming 84px header */
   display: flex;
   flex-direction: column;
-  padding: 0 !important;
+  padding: 0;
   max-width: 1000px;
   margin: 0 auto;
 }
